force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Access_Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Access_Activity_Log__c</fullName>
    <description>Any server or activity logs showing proof that the customer accessed or downloaded the purchased digital product. This information should include IP addresses, corresponding timestamps, and any detailed recorded activity.</description>
    <inlineHelpText>Any server or activity logs showing proof that the customer accessed or downloaded the purchased digital product. This information should include IP addresses, corresponding timestamps, and any detailed recorded activity.</inlineHelpText>
    <label>Activity Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>