force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Additional_Information__c</fullName>
    <description>Any additional evidence or statements.</description>
    <inlineHelpText>Any additional evidence or statements.</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>