force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Cancellation_Policy_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Cancellation_Policy_Disclosure__c</fullName>
    <description>An explanation of how and when the customer was shown your refund policy prior to purchase.</description>
    <inlineHelpText>An explanation of how and when the customer was shown your refund policy prior to purchase.</inlineHelpText>
    <label>Cancellation Policy Disclosure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>