force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Dispute__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Dispute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute</label>
    <referenceTo>bt_stripe__Dispute__c</referenceTo>
    <relationshipName>Dispute_Evidence_Details</relationshipName>
    <type>Lookup</type>
</CustomField>