force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Duplicate_Charge_Explanation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Duplicate_Charge_Explanation__c</fullName>
    <description>An explanation of the difference between the disputed charge and the prior charge that appears to be a duplicate.</description>
    <inlineHelpText>An explanation of the difference between the disputed charge and the prior charge that appears to be a duplicate.</inlineHelpText>
    <label>Duplicate Charge Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>