force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Product_Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Product_Description__c</fullName>
    <description>A description of the product or service which was sold.</description>
    <inlineHelpText>A description of the product or service which was sold.</inlineHelpText>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>