force-app/main/default/objects/bt_stripe__Dispute_Evidence__c/fields/bt_stripe__Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Shipping_Date__c</fullName>
    <description>Deprecated - using the Shipping_Date_String__c field to match the datatype in Stripe</description>
    <inlineHelpText>Deprecated - using the Shipping_Date_String__c field to match the datatype in Stripe</inlineHelpText>
    <label>zDeprecated Shipping Date</label>
    <type>Date</type>
</CustomField>